implemented controller for playlist